--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: sans-serif;
+  padding: 40px 32px;
+  font-family: "Poppins", sans-serif;
+  width: 100vw;
+  height: 100vh;
+}
+#root {
+  display: flex;
+}
+a {
+  text-decoration: none;
 }
