--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("../assets/background.png");
+  background-image: url("/assets/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
