--- a/src/components/PageSection/style.module.css
+++ b/src/components/PageSection/style.module.css
@@ -1,5 +1,9 @@
 .sectionContainer {
-  margin-bottom: 35px;
+  margin-bottom: 30px;
+}
+
+.sectionContainer:last-child {
+  margin-bottom: 0;
 }
 
 .sectionContent {
