--- a/src/components/GeneralInfoCard/style.module.css
+++ b/src/components/GeneralInfoCard/style.module.css
@@ -1,9 +1,9 @@
 .cardContainer {
   position: relative;
   display: flex;
-  width: 368px;
+  width: 23rem;
   height: 176px;
-  margin-right: 16px;
+  margin-right: 1rem;
 }
 
 .cardContainer:last-child {
@@ -19,7 +19,7 @@
   border-radius: 6px;
   width: 100%;
   height: 100%;
-  padding: 22px 24px 32px 16px;
+  padding: 22px 24px 2rem 1rem;
   box-shadow: 0px 8px 26px rgba(71, 87, 122, 0.08);
 }
 
@@ -50,7 +50,7 @@
 .backgroundCard {
   position: absolute;
   top: 12px;
-  right: 16px;
+  right: 1rem;
   width: 270px;
   height: 172px;
   background: white;
