--- a/src/components/PageHeader/style.module.css
+++ b/src/components/PageHeader/style.module.css
@@ -2,6 +2,6 @@
   height: 88px;
   display: flex;
   justify-content: space-between;
-  padding: 24px 32px;
+  padding: 24px 2rem;
   background-color: white;
 }
