--- a/src/components/PageHeader/components/UserInfo/style.module.css
+++ b/src/components/PageHeader/components/UserInfo/style.module.css
@@ -1,4 +1,5 @@
 .userInfo {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,4 +19,26 @@
 .userName {
   font-weight: 700;
   margin: 0 10px 0 5px;
+}
+
+.userMenu {
+  z-index: 3;
+  position: absolute;
+  bottom: -160px;
+  background: #ffffff;
+  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.userMenu p {
+  color: #303b5a;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
+  padding: 1rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.userMenuHide {
+  display: none;
 }
